# res_multi_agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/research_foundry/: __init__.py  __main__.py  cli.py  config.py  docx_writer.py  gateway.py  models.py  pipeline.py  prompts.py  render.py  sdk_team.py  storage.py  terminal.py  utils.py
tests/: test_cli.py  test_config.py  test_docx_writer.py  test_gateway.py  test_pipeline.py  test_sdk_team.py  test_utils.py
